--- a/index.html
+++ b/index.html
@@ -126,6 +126,47 @@
             </li>
         </ul>
         </section>
+        <section>
+            <h2> Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images2/appimages.jpg" width="360" height="300" alt="app Banking">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+
+                <li>
+                    <img src="./images2/payimages.jpg" width="360" height="300" alt="cashless">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img src="./images2/macimages.jpg" width="360" height="300" alt="Meditaion app">
+                    <h3>Meditaion App</h3>
+                    <p>App</p>
+                </li>
+
+                <li>
+                    <img src="./images2/autoimages.jpg" width="360" height="300" alt="taxi Service">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img src="./images2/phoneimages.jpg" width="360" height="300" alt="phone Design">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+
+                <li>
+                    <img src="./images2/girlimages.jpg" width="360" height="300" alt="gitl marketing">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+                
+            </ul>
+        </section>
     </main>
  <!--Footer-->  
      <footer>
