--- a/index.html
+++ b/index.html
@@ -57,71 +57,71 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images1/1img.jpg" width="264" height="260" alt="Team Member 1">
+                <img src="./images/1img.jpg" width="264" height="260" alt="Team Member 1">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
                 <a href="https://www.instagram.com/mark_guerrero/" target="_blank">
-                    <img src="./images1/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon">
+                    <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon">
                 </a>
                 <a href="https://twitter.com/MarkGuerrero" target="_blank">
-                    <img src="./images1/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
+                    <img src="./images/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
                 </a>
                 <a href="https://www.facebook.com/mark.guerrero.75" target="_blank">
-                    <img src="./images1/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">
+                    <img src="./images/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">
                 </a>
                 <a href="https://www.linkedin.com/in/mark-guerrero-123456789/" target="_blank">    
-                    <img src="./images1/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
+                    <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
                 </a>
             </li>
             <li>
-                <img src="./images1/2img.jpg" width="264" height="260" alt="Team Member 2">
+                <img src="./images/2img.jpg" width="264" height="260" alt="Team Member 2">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
                 <a href="https://www.instagram.com/tom_ford/" target="_blank">
-                    <img src="./images1/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon">
+                    <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon">
                 </a>
                 <a href="https://twitter.com/TomFord" target="_blank">
-                    <img src="./images1/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
+                    <img src="./images/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
                 </a>
                 <a href="https://www.facebook.com/tom.ford.75" target="_blank">
-                    <img src="./images1/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">
+                    <img src="./images/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">
                 </a>
                 <a href="https://www.linkedin.com/in/tom-ford-123456789/" target="_blank">    
-                    <img src="./images1/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">   
+                    <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">   
                 </a>
             </li>
             <li>
-                <img src="./images1/3img.jpg" width="264" height="260" alt="Team Member 3">
+                <img src="./images/3img.jpg" width="264" height="260" alt="Team Member 3">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
                 <a href="https://www.instagram.com/camila_garcia/" target="_blank">
-                    <img src="./images1/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon"> 
+                    <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon"> 
                 </a>
                 <a href="https://twitter.com/CamilaGarcia" target="_blank"> 
-                    <img src="./images1/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
+                    <img src="./images/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
                 </a>
                 <a href="https://www.facebook.com/camila.garcia.75" target="_blank">
-                    <img src="./images1/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">   
+                    <img src="./images/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">   
                 </a>
                 <a href="https://www.linkedin.com/in/camila-garcia-123456789/" target="_blank">    
-                    <img src="./images1/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
+                    <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
                 </a>
             </li>
             <li>
-                <img src="./images1/4img.jpg" width="264" height="260" alt="Team Member 4">
+                <img src="./images/4img.jpg" width="264" height="260" alt="Team Member 4">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
                 <a href="https://www.instagram.com/daniel_wilson/" target="_blank">
-                    <img src="./images1/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon"> 
+                    <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon"> 
                 </a>
                 <a href="https://twitter.com/DanielWilson" target="_blank">
-                    <img src="./images1/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
+                    <img src="./images/icons/twitter.jpg" width="40" height="40" alt="Twitter Icon">
                 </a>
                 <a href="https://www.facebook.com/daniel.wilson.75" target="_blank">
-                    <img src="/images1/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">
+                    <img src="/images/icons/facebook.jpg" width="40" height="40" alt="Facebook Icon">
                 </a>
                 <a href="https://www.linkedin.com/in/daniel-wilson-123456789/" target="_blank">    
-                    <img src="./images1/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
+                    <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
                 </a>
             </li>
         </ul>
@@ -130,37 +130,37 @@
             <h2> Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images2/appimages.jpg" width="360" height="300" alt="app Banking">
+                    <img src="./images/appimages.jpg" width="360" height="300" alt="app Banking">
                     <h3>Banking App</h3>
                     <p>App</p>
                 </li>
 
                 <li>
-                    <img src="./images2/payimages.jpg" width="360" height="300" alt="cashless">
+                    <img src="./images/payimages.jpg" width="360" height="300" alt="cashless">
                     <h3>Cashless Payment</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./images2/macimages.jpg" width="360" height="300" alt="Meditaion app">
+                    <img src="./images/macimages.jpg" width="360" height="300" alt="Meditaion app">
                     <h3>Meditaion App</h3>
                     <p>App</p>
                 </li>
 
                 <li>
-                    <img src="./images2/autoimages.jpg" width="360" height="300" alt="taxi Service">
+                    <img src="./images/autoimages.jpg" width="360" height="300" alt="taxi Service">
                     <h3>Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./images2/phoneimages.jpg" width="360" height="300" alt="phone Design">
+                    <img src="./images/phoneimages.jpg" width="360" height="300" alt="phone Design">
                     <h3>Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
 
                 <li>
-                    <img src="./images2/girlimages.jpg" width="360" height="300" alt="gitl marketing">
+                    <img src="./images/girlimages.jpg" width="360" height="300" alt="gitl marketing">
                     <h3>Online Courses</h3>
                     <p>Marketing</p>
                 </li>
