--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <title>WebStudio</title>
 </head>
 <!-- Top line-->
@@ -11,9 +12,9 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#" class="link">Studio</a></li>
+                <li><a href="#" class="link">Portfolio</a></li>
+                <li><a href="#" class="link">Contacts</a></li>
             </ul>
         </nav>
     <address>
