--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./CSS/css.style">
 </head>
 <!-- Top line-->
-<body>
+<body class="body">
     <header>
-        <nav>
+        <nav class="nav">   
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="#" class="link">Studio</a></li>
@@ -25,8 +25,8 @@
     </address>
     </header>
  <!--Main Section-->    
-<main>
-        <section>
+<main class="main">
+        <section class="main-section">
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
