--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./CSS/css.style">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <!-- Top line-->
-<body class="body">
+<body>
     <header>
-        <nav class="nav">   
+        <nav>  
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="#" class="link">Studio</a></li>
@@ -27,7 +27,7 @@
  <!--Main Section-->    
 <main class="main">
         <section class="main-section">
-            <h1>Effective Solutions for Your Business</h1>
+            <h1 class="h1">Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
  <!--About Us Section-->            
