--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WebStudio</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>WebStudio</title>
+    
 </head>
 <!-- Top line-->
 <body>
@@ -28,6 +33,10 @@
 <main class="main">
         <section class="main-section">
             <h1 class="h1">Effective Solutions for Your Business</h1>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+                rel="stylesheet">
             <button type="button">Order Service</button>
         </section>
  <!--About Us Section-->            
