--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 <!-- Top line-->
 <body>
     <header>
-        <nav>  
-            <a href="./index.html">WebStudio</a>
+        <nav class="nav">  
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+                rel="stylesheet">
+            <a class="nav-a" href="./index.html"><span class="accent">Web</span>Studio</a>
             <ul>
                 <li><a href="#" class="link">Studio</a></li>
                 <li><a href="#" class="link">Portfolio</a></li>
