--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
                 rel="stylesheet">
             <a class="nav-a" href="./index.html"><span class="accent">Web</span>Studio</a>
-            <ul>
+            <ul class="page-nav">
                 <li><a href="#" class="link">Studio</a></li>
                 <li><a href="#" class="link">Portfolio</a></li>
                 <li><a href="#" class="link">Contacts</a></li>
             </ul>
         </nav>
     <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contacts">
+            <li class="contacts-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </header>
@@ -46,7 +46,7 @@
  <!--About Us Section-->            
         <section>
             <h2>About us</h2>
-            <ul>
+            <ul class="about-us">
                 <li> 
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -69,7 +69,7 @@
        
     <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="team">
             <li>
                 <img src="./images/1img.jpg" width="264" height="260" alt="Team Member 1">
                 <h3>Mark Guerrero</h3>
@@ -139,10 +139,10 @@
                 </a>
             </li>
         </ul>
-        </section>
+    </section>
         <section>
             <h2> Portfolio</h2>
-            <ul>
+            <ul class="portfolio">
                 <li>
                     <img src="./images/appimages.jpg" width="360" height="300" alt="app Banking">
                     <h3>Banking App</h3>
