--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </nav>
     <address>
         <ul class="contacts">
-            <li class="contacts-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts-tel"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </header>
@@ -65,7 +65,7 @@
                 </li>
             </ul>  
         </section>
- <!--Team Section-->
+ <!--Team Section-->    
        
     <section>
         <h2>Our Team</h2>
@@ -141,7 +141,7 @@
         </ul>
     </section>
         <section>
-            <h2> Portfolio</h2>
+            <h2>Our Portfolio</h2>
             <ul class="portfolio">
                 <li>
                     <img src="./images/appimages.jpg" width="360" height="300" alt="app Banking">
@@ -183,8 +183,8 @@
         </section>
     </main>
  <!--Footer-->  
-     <footer>
-    <a href="./index.html">WebStudio</a>
+     <footer class="footer">
+    <a href="./index.html"><span class="footer-accent">Web</span>Studio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     </body>
