--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <!-- Top line-->
-<body>
+<body class="body">
     <header>
         <nav class="nav">  
             <link rel="preconnect" href="https://fonts.googleapis.com">
