--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap" rel="stylesheet">
             <a class="nav-a" href="./index.html"><span class="accent">Web</span>Studio</a>
             <ul class="page-nav">
-                <li><a href="#" class="link">Studio</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="#" class="link">Portfolio</a></li>
                 <li><a href="#" class="link">Contacts</a></li>
             </ul>
@@ -183,7 +183,7 @@
     </main>
  <!--Footer-->  
      <footer class="footer">
-    <a href="./index.html"><span class="footer-accent">Web</span>Studio</a>
+    <a href="./index.html">Web<span class="footer-accent">Studio</span></a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     </body>
