--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap" rel="stylesheet">
     <title>WebStudio</title>
     
 </head>
@@ -15,11 +18,8 @@
 <body class="body">
     <header>
         <nav class="nav">  
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap" rel="stylesheet">
-            <a class="nav-a" href="./index.html"><span class="accent">Web</span>Studio</a>
-            <ul class="page-nav">
+            <a class="nav-title" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <ul class="nav-list">
                 <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="#" class="link">Portfolio</a></li>
                 <li><a href="#" class="link">Contacts</a></li>
