--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body class="body">
     <header>
         <nav class="nav">  
-            <a class="nav-title" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <a class="nav-title" href="./index.html">Web<span class="accent">Studio</span></a>
             <ul class="nav-list">
                 <li><a href="./index.html" class="link">Studio</a></li>
-                <li><a href="#" class="link">Portfolio</a></li>
-                <li><a href="#" class="link">Contacts</a></li>
+                <li><a href="" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
     <address>
