--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
-    <address>
-        <ul class="contacts">
+    <address class="contacts">
+        <ul class="contacts-list">
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
