--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
  <!--Main Section-->    
 <main class="main">
         <section class="main-section">
-            <h1 class="h1">Effective Solutions for Your Business</h1>
+            <h1 class="main-section-title">Effective Solutions for Your Business</h1>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
                 rel="stylesheet">
-            <button type="button">Order Service</button>
+            <button class="button"   type="button">Order Service</button>
         </section>
  <!--About Us Section-->            
-        <section>
+        <section class="about">
             <h2>About us</h2>
             <ul class="about-us">
                 <li> 
@@ -139,9 +139,9 @@
             </li>
         </ul>
     </section>
-        <section>
+        <section class="portfolio">
             <h2>Our Portfolio</h2>
-            <ul class="portfolio">
+            <ul class="portfolio-title">
                 <li>
                     <img src="./images/appimages.jpg" width="360" height="300" alt="app Banking">
                     <h3>Banking App</h3>
