--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </section>
  <!--Team Section-->    
        
-    <section>
+    <section class="team">
         <h2>Our Team</h2>
-        <ul class="team">
+        <ul class="team-title">
             <li>
                 <img src="./images/1img.jpg" width="264" height="260" alt="Team Member 1">
                 <h3>Mark Guerrero</h3>
@@ -188,3 +188,4 @@
     </footer>
     </body>
 </html>
+
