--- a/index.html
+++ b/index.html
@@ -36,30 +36,26 @@
 <main class="main">
         <section class="main-section">
             <h1 class="main-section-title">Effective Solutions for Your Business</h1>
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-                rel="stylesheet">
             <button class="main-box" type="button">Order Service</button>
         </section>
  <!--About Us Section-->            
         <section class="about">
-            <h2>About us</h2>
-            <ul class="about-us">
+            <h2 class="name">About us</h2>
+            <ul class="about-us-list">
                 <li> 
-                    <h3>Strategy</h3>
+                    <h3 class="name-next">Strategy</h3>
                     <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="name-next">Punctuality</h3>
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>   
-                    <h3>Diligence</h3>
+                    <h3 class="name-next">Diligence</h3>
                     <p class="text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>    
-                    <h3>Technologies</h3>
+                    <h3 class="name-next">Technologies</h3>
                     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>  
@@ -67,11 +63,11 @@
  <!--Team Section-->    
        
     <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="name">Our Team</h2>
         <ul class="team-title">
             <li>
                 <img src="./images/1img.jpg" width="264" height="260" alt="Team Member 1">
-                <h3>Mark Guerrero</h3>
+                <h3 class="name-next">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
                 <a href="https://www.instagram.com/mark_guerrero/" target="_blank">
                     <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon">
@@ -88,7 +84,7 @@
             </li>
             <li>
                 <img src="./images/2img.jpg" width="264" height="260" alt="Team Member 2">
-                <h3>Tom Ford</h3>
+                <h3 class="name-next">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
                 <a href="https://www.instagram.com/tom_ford/" target="_blank">
                     <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon">
@@ -105,7 +101,7 @@
             </li>
             <li>
                 <img src="./images/3img.jpg" width="264" height="260" alt="Team Member 3">
-                <h3>Camila Garcia</h3>
+                <h3 class="name-next">Camila Garcia</h3>
                 <p class="text">Marketing</p>
                 <a href="https://www.instagram.com/camila_garcia/" target="_blank">
                     <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon"> 
@@ -122,7 +118,7 @@
             </li>
             <li>
                 <img src="./images/4img.jpg" width="264" height="260" alt="Team Member 4">
-                <h3>Daniel Wilson</h3>
+                <h3 class="name-next">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
                 <a href="https://www.instagram.com/daniel_wilson/" target="_blank">
                     <img src="./images/icons/instagram.jpg" width="40" height="40" alt="Instagram Icon"> 
@@ -140,41 +136,41 @@
         </ul>
     </section>
         <section class="portfolio">
-            <h2>Our Portfolio</h2>
+            <h2 class="name">Our Portfolio</h2>
             <ul class="portfolio-title">
                 <li>
                     <img src="./images/appimages.jpg" width="360" height="300" alt="app Banking">
-                    <h3>Banking App</h3>
+                    <h3 class="name-next">Banking App</h3>
                     <p class="text">App</p>
                 </li>
 
                 <li>
                     <img src="./images/payimages.jpg" width="360" height="300" alt="cashless">
-                    <h3>Cashless Payment</h3>
+                    <h3 class="name-next">Cashless Payment</h3>
                     <p class="text">Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/macimages.jpg" width="360" height="300" alt="Meditaion app">
-                    <h3>Meditaion App</h3>
+                    <h3 class="name-next">Meditaion App</h3>
                     <p class="text">App</p>
                 </li>
 
                 <li>
                     <img src="./images/autoimages.jpg" width="360" height="300" alt="taxi Service">
-                    <h3>Taxi Service</h3>
+                    <h3 class="name-next">Taxi Service</h3>
                     <p class="text">Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/phoneimages.jpg" width="360" height="300" alt="phone Design">
-                    <h3>Screen Illustrations</h3>
+                    <h3 class="name-next">Screen Illustrations</h3>
                     <p class="text">Design</p>
                 </li>
 
                 <li>
                     <img src="./images/girlimages.jpg" width="360" height="300" alt="gitl marketing">
-                    <h3>Online Courses</h3>
+                    <h3 class="name-next">Online Courses</h3>
                     <p class="text">Marketing</p>
                 </li>
                 
