--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="team">
         <h2 class="name">Our Team</h2>
         <ul class="team-title">
-            <li>
+            <li class="team-list">
                 <img src="./images/1img.jpg" width="264" height="260" alt="Team Member 1">
                 <h3 class="name-next">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
@@ -81,7 +81,7 @@
                     <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
                 </a>
             </li>
-            <li>
+            <li class="team-list">
                 <img src="./images/2img.jpg" width="264" height="260" alt="Team Member 2">
                 <h3 class="name-next">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
@@ -98,7 +98,7 @@
                     <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">   
                 </a>
             </li>
-            <li>
+            <li class="team-list">
                 <img src="./images/3img.jpg" width="264" height="260" alt="Team Member 3">
                 <h3 class="name-next">Camila Garcia</h3>
                 <p class="text">Marketing</p>
@@ -115,7 +115,7 @@
                     <img src="./images/icons/linkedin.jpg" width="40" height="40" alt="LinkedIn Icon">
                 </a>
             </li>
-            <li>
+            <li class="team-list">
                 <img src="./images/4img.jpg" width="264" height="260" alt="Team Member 4">
                 <h3 class="name-next">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
@@ -150,7 +150,7 @@
                 </li>
 
                 <li>
-                    <img src="./images/macimages.jpg" width="360" height="300" alt="Meditaion app">
+                    <img src="./images/macimages.jpg" width="360" height="300" alt="Meditaion_app">
                     <h3 class="name-next">Meditaion App</h3>
                     <p class="text">App</p>
                 </li>
