--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </li>
 
                 <li>
-                    <img src="./images/macimages.jpg" width="360" height="300" alt="Meditaion_app">
+                    <img src="./images/macimages.jpg" width="360" height="300" alt=" Meditation App">
                     <h3 class="name-next">Meditaion App</h3>
                     <p class="text">App</p>
                 </li>
@@ -178,8 +178,8 @@
     </main>
  <!--Footer-->  
      <footer class="footer">
-    <a href="./index.html">Web<span class="footer-accent">Studio</span></a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <a class="footer-logo" href="./index.html">Web<span class="footer-accent">Studio</span></a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     </body>
 </html>
