--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </nav>
     <address class="contacts">
         <ul class="contacts-list">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </header>
@@ -150,8 +150,8 @@
                 </li>
 
                 <li>
-                    <img src="./images/macimages.jpg" width="360" height="300" alt=" Meditation App">
-                    <h3 class="name-next">Meditaion App</h3>
+                    <img src="./images/macimages.jpg" width="360" height="300" alt="Meditation App">
+                    <h3 class="name-next">Meditation App</h3>
                     <p class="text">App</p>
                 </li>
 
