--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="body">
     <header>
         <nav class="nav">  
-            <a class="nav-title" href="./index.html">Web<span class="accent">Studio</span></a>
+            <a class="nav-logo" href="./index.html">Web<span class="accent">Studio</span></a>
             <ul class="nav-list">
                 <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="" class="link">Portfolio</a></li>
