--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
-    <address class="contacts">
-        <ul class="contacts-list">
-            <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="contact">
+        <ul>
+            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </header>
