--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     <address class="contact">
-        <ul>
+        <ul class="contact-list">
             <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
